syntax = "proto3";

package service;

// generate code with:  protoc -I. --go_out=plugins=grpc:. ./registration.proto

import "google/api/annotations.proto";

service RegistrationService {
    rpc RegisterPatient (RegisterPatientRequest) returns (RegisterPatientResponse) {
        option (google.api.http) = {
            post: "/api/patient"
            body: "patient"
        };
    }
    rpc CompletePatientRegistration (CompletePatientRegistrationRequest) returns (CompletePatientRegistrationResponse) {
        option (google.api.http) = {
            put: "/api/patient/{patientUid}/challenge",
            body: "credentials"
        };
    }
}

message RegisterPatientRequest {
    Patient patient = 1;
}

message RegisterPatientResponse {
    string patientUid = 1;
}

message CompletePatientRegistrationRequest {
    string patientUid = 1;
    RegistrationCredentials credentials = 2;
}

message RegistrationCredentials {
    int32 pincode = 1;
}

message CompletePatientRegistrationResponse {
    RegistrationStatus status = 1;
}

message Patient {
    string BSN = 1;
    string fullName = 2;
    Address address = 3;
    Contact contact = 4;
    RegistrationStatus status = 5;
}

message Address {
    string postalCode = 1;
    int64 houseNumber = 2;
}

message Contact {
    string emailAddress = 1;
    string phoneNumber = 2;
}

enum RegistrationStatus {
    REGISTRATION_UNKNOWN = 0;
    REGISTRATION_PENDING = 1;
    REGISTRATION_CONFIRMED = 2;
}
